Fix: Overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,10 @@
   }
 }
 
-body {
+html, body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter), Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
